deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-website
spec:
  replicas: 3
  selector:
    matchLabels:
      app: portfolio-website
  template:
    metadata:
      labels:
        app: portfolio-website
    spec:
      containers:
      - name: portfolio-website
        image: gcr.io/portfolio-website-433505/portfolio-website:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 256Mi
