service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-website-service
spec:
  type: LoadBalancer
  loadBalancerIP: 34.110.177.79
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: portfolio-website
